<resources>
    <string name="app_name" translatable="false">ViewRChat</string>
    <string name="app_name_split_01" translatable="false">ViewR</string>
    <string name="app_name_split_02" translatable="false">Chat</string>

    <string name="hello_world">Hello World!</string>

    <string name="general_please_re_login">Please re-login to VRChat</string>

    <!-- Tutorial Activity -->
    <string name="title_activity_tutorial">Tutorial</string>

    <string name="pager_tutorial_generic_next">Next</string>

    <string name="pager_tutorial_01_description_01">・Anytime, anywhere check online friends</string>
    <string name="pager_tutorial_01_description_02">・TODO</string>
    <string name="pager_tutorial_01_description_03">・Support Dark theme / Black theme</string>

    <string name="pager_tutorial_02_title">Terms of service / Notes</string>
    <string name="pager_tutorial_02_please_read">Please be sure to read it</string>
    <string name="pager_tutorial_02_scroll_down">Please scroll down</string>
    <string name="pager_tutorial_02_agree">Agree terms of service</string>
    <string name="pager_tutorial_02_terms_of_service" translatable="false">
        当アプリまた当アプリの開発者は VRChat Inc. とは提携しておらず、一切の関係もございません。\n
        \n
        当アプリを使用して発生したことに関して一切の責任を負いません\n
        \n
        当アプリ自体は情報収集などは一切行っていませんが、VRChat APIにアクセスしているため VRChatには情報を収集される可能性があります。\n
        https://www.vrchat.com/privacy/\n
        \n
        当アプリが使用しているVRChat APIは VRChat公式からサポートされいません。\n
        そのためアプリが使用できなくなったり、予想外の動作をしたり、ログインしたアカウントがBANされるなどの可能性が存在します。\n
        \n
        当アプリは趣味で開発しているため、サポートの保証期間などは存在しません。\n
        そのためいつサポート終了するかどうかはわかりません。\n
        できる限り機能追加や、バグ修正などのサポートをしていきたいとは思っています。\n
        \n
        当アプリは Apache License 2.0 で配布されています。\n
        https://github.com/riku1227/viewrchat
        \n
        \n
        ログインについて\n
        VRChat APIを使用したアプリでユーザーのIDやパスワードを要求してはいけないことになっています。\n
        そのため当アプリではアプリ内ブラウザー(WebView)で VRChat公式サイト(https://www.vrchat.com/home/login) にアクセスしログインしてもらい、\n
        ログイン情報(cookie)をアプリが取り出し使用するという構造になっています。\n
        \n
        Other languages user?\n
        Please use translate tools (Google Translate etc&#8230;)\n
        Sorry
    </string>

    <string name="pager_tutorial_03_how_to_login">How to login</string>
    <string name="pager_tutorial_03_how_to_01">Press bottom login button to access VRChat login page</string>
    <string name="pager_tutorial_03_how_to_02">After logging in, press the check button at the bottom right</string>
    <string name="pager_tutorial_03_how_to_03">Login complete</string>
    <string name="pager_tutorial_03_login">Login</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>
    <string name="activity_login_please_login">Please login to VRChat</string>

    <!-- Main Activity -->
    <string name="activity_main_bottom_friends_location">Friends location</string>
    <string name="activity_main_bottom_friends">Friends</string>

    <!-- Main Activity
            Navigation Drawer -->

    <string name="activity_main_drawer_profile">Profile</string>
    <string name="activity_main_drawer_settings">Settings</string>

    <!-- Friends Location Fragment -->
    <string name="fragment_friends_location_invite_me_button">INVITE ME</string>
    <string name="fragment_friends_location_sent_invite">Sent invite to Me</string>
    <string name="fragment_friends_location_update_button">Update</string>
    <string name="fragment_friends_location_updated_instance_info">Updated instance information</string>
    <string name="fragment_friends_location_none_user_text">I don\'t have friends who in more than a friend-plus instance.</string>
    <string name="fragment_friends_location_instance_user_count_text" translatable="false">%1$d / %2$d</string>

    <!-- Photographing_mode -->
    <string name="photographing_mode_user_name">User Name</string>
    <string name="photographing_mode_user_description">User Status</string>
    <string name="photographing_mode_user_bio">User Bio</string>
    <string name="photographing_mode_world_name">World Name</string>
    <string name="photographing_mode_world_description">World Description</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="activity_settings_appearance_title">Appearance</string>
    <string name="activity_settings_appearance_summary">Theme, etc&#8230;</string>
    <string name="activity_settings_appearance_restart_to_apply">Please restart to apply change</string>
    <string name="activity_settings_appearance_general">General</string>
    <string name="activity_settings_appearance_theme">Theme</string>
    <string name="activity_settings_appearance_theme_follow_system">System</string>
    <string name="activity_settings_appearance_theme_light">Light</string>
    <string name="activity_settings_appearance_theme_dark">Dark</string>
    <string name="activity_settings_appearance_theme_black">Black (for OLED display device)</string>
    <string name="activity_settings_appearance_enable_black_theme">Enable Black theme</string>
    <string name="activity_settings_appearance_enable_black_theme_summary">Optimized for OLED display devices</string>
    <string name="activity_settings_appearance_enable_photographing_mode">Enable photographing mode</string>
    <string name="activity_settings_appearance_enable_photographing_mode_summary">Hide world info, user info, etc&#8230;</string>
    <string name="activity_settings_appearance_friends_list">Friends list</string>
    <string name="activity_settings_appearance_colored_border">Enable colored border</string>
    <string name="activity_settings_appearance_colored_border_summary">The user\'s trust level follow can be colored</string>
    <string name="activity_settings_app_info_title">App info</string>
    <string name="activity_settings_app_info_summary">Version: %1$s</string>
    <string name="activity_settings_app_info_version">Version</string>
    <string name="activity_settings_app_info_source_code">Source code</string>
    <string name="activity_settings_app_info_website">Website</string>
    <string name="activity_settings_app_info_oss_licence">OSS Licence</string>

    <!-- User Profile Activity -->
    <string name="activity_user_profile_languages">Languages</string>
    <string name="activity_user_profile_status">Status</string>
    <string name="activity_user_profile_links">Links</string>
    <string name="activity_user_profile_location">Location</string>

    <!-- World Information Activity -->
    <string name="activity_world_info_created_by">Created by %1$s</string>
    <string name="activity_world_info_instance_info_title">Instance information</string>
    <string name="activity_world_info_instance_info_type">Type:</string>
    <string name="activity_world_info_instance_info_n_users">Number of users:</string>
    <string name="activity_world_info_instance_info_friends">Friends:</string>
    <string name="activity_world_info_instance_info_windows" translatable="false">Windows:</string>
    <string name="activity_world_info_instance_info_android" translatable="false">Quest:</string>
    <string name="activity_world_info_world_information_title">World information</string>
    <string name="activity_world_info_world_information_players">PLAYERS</string>
    <string name="activity_world_info_world_information_privates">PRIVATES</string>
    <string name="activity_world_info_world_information_favorites">FAVORITES</string>
    <string name="activity_world_info_world_information_heat">HEAT</string>
    <string name="activity_world_info_world_information_visits">VISITS</string>
    <string name="activity_world_info_world_information_capacity">CAPACITY</string>
    <string name="activity_world_info_world_information_created">CREATED</string>
    <string name="activity_world_info_world_information_last_update">LAST UPDATE</string>
    <string name="activity_world_info_world_information_labs_day">LABS\'D</string>
    <string name="activity_world_info_world_information_published">PUBLISHED</string>
    <string name="activity_world_info_public_instances_title">Public instances</string>

    <!-- Crash Report Dialog -->
    <string name="dialog_crash_report_title">App Crashed</string>
    <string name="dialog_crash_report_positive">Copy log</string>
    <string name="dialog_crash_report_negative">Close</string>

    <!-- General -->
    <string name="general_cooltime_now">Cooltime…</string>
    <string name="general_private_instance" translatable="false">PRIVATE</string>
    <string name="general_last_login_platform">Platform: %1$s</string>
    <string name="general_drawer_open">Open drawer</string>
    <string name="general_drawer_close">Close drawer</string>
    <string name="general_colon" translatable="false">:</string>
</resources>
