<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/textColor"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?attr/backgroundColor"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/viewRText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/app_name_split_01"
                        android:textColor="@color/textColor"
                        android:textSize="46sp"
                        android:layout_marginEnd="16dp"/>

                    <TextView
                        android:id="@+id/chatText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/textColor"
                        android:text="@string/app_name_split_02"
                        android:textColor="?attr/backgroundColor"
                        android:textSize="46sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/pagerTutorial01Description01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pager_tutorial_01_description_01"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/pagerTutorial01Description02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pager_tutorial_01_description_02"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/pagerTutorial01Description03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pager_tutorial_01_description_03"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pagerTutorial01NextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/pager_tutorial_generic_next"
            app:icon="@drawable/ic_navigate_next_24px"
            app:iconGravity="textEnd"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>