<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/recyclerInstanceListWorldName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text=""
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/recyclerInstanceListInstanceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text=""
        android:textColor="@color/textColorHigh"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/recyclerInstanceListWorldName" />

    <TextView
        android:id="@+id/recyclerInstanceListColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/general_colon"
        android:textColor="@color/textColorHigh"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/recyclerInstanceListInstanceType"
        app:layout_constraintTop_toTopOf="@+id/recyclerInstanceListInstanceType" />

    <TextView
        android:id="@+id/recyclerInstanceListInstanceID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/textColorHigh"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/recyclerInstanceListColon"
        app:layout_constraintTop_toTopOf="@+id/recyclerInstanceListColon" />

    <TextView
        android:id="@+id/recyclerInstanceListNUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/recyclerInstanceListInstanceType" />

    <Button
        android:id="@+id/recyclerInstanceListUpdateInstance"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fragment_friends_location_update_button"
        app:icon="@drawable/ic_sync_24px"
        app:layout_constraintEnd_toStartOf="@+id/recyclerInstanceListInviteMeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/recyclerInstanceListInviteMeButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fragment_friends_location_invite_me_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/recyclerInstanceListUpdateInstance"
        app:layout_constraintTop_toTopOf="@+id/recyclerInstanceListUpdateInstance" />


</androidx.constraintlayout.widget.ConstraintLayout>